--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,15 @@ install:
   - if [ "$EMACS" = "emacs24" ]; then
         sudo add-apt-repository -y ppa:cassou/emacs &&
         sudo apt-get update -qq &&
-        sudo apt-get install -qq emacs24 emacs24-el;
+        sudo apt-get install -qq emacs24 emacs24-el &&
+        make install-deps;
     fi
   - if [ "$EMACS" = 'emacs-snapshot' ]; then
         sudo add-apt-repository -y ppa:cassou/emacs &&
         sudo apt-get update -qq &&
         sudo apt-get install -qq emacs-snapshot &&
-        sudo apt-get install -qq emacs-snapshot-el emacs-snapshot-gtk;
+        sudo apt-get install -qq emacs-snapshot-el emacs-snapshot-gtk &&
+        make install-deps;
     fi
 
 script:
