--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 
 install:
   - if [ "$EMACS" = "emacs24" ]; then
-        sudo add-apt-repository -y ppa:cassou/emacs &&
+        sudo add-apt-repository -y ppa:fryda.tomas/emacs &&
         sudo apt-get update -qq &&
         sudo apt-get install -qq emacs24 emacs24-el &&
         make install-deps;
