--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ matrix:
 env:
   - EMACS_VERSION=24.5
   - EMACS_VERSION=25.3
+  - EMACS_VERSION=26.1
   - EMACS_VERSION=snapshot
 before_install:
   # Configure $PATH: Executables are installed to $HOME/bin
